--- a/Dreamcoding/YOUTUBE_MOBILE/style.css
+++ b/Dreamcoding/YOUTUBE_MOBILE/style.css
@@ -28,6 +28,17 @@ body {
   font-family: "Times New Roman", Times, serif;
 }
 
+ul {
+  list-style: none;
+}
+
+button,
+button:focus {
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -65,4 +76,158 @@ header .icons i {
   width: 100%;
   height: 100%;
   max-width: 1000px;
+}
+
+body > .info {
+  padding: var(--side-paddig);
+}
+
+.info .metadata .hashtags {
+  display: flex;
+  font-size: var(--font-small);
+  color: var(--blue-color);
+}
+
+.info .metadata .hashtags li {
+  margin-right: var(--side-paddig);
+}
+
+.info .metadata .titleAndButton {
+  display: flex;
+}
+.info .metadata .title {
+  font-size: var(--font-medium);
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  margin-right: var(--side-paddig);
+}
+
+.info .metadata .moreBtn {
+  height: 100%;
+}
+
+.info .views {
+  font-size: var(--font-small);
+  color: var(--grey-dark-color);
+}
+
+/* action buttons*/
+.info .actions {
+  display: flex;
+  justify-content: space-around;
+  margin: var(--side-paddig) 0;
+}
+
+.info .actions button {
+  display: flex;
+  flex-direction: column;
+  font-size: var(--font-small);
+}
+
+.info .actions button i {
+  margin: auto;
+  margin-bottom: calc(var(--side-paddig) / 2);
+  font-size: 16px;
+  color: var(--grey-dark-color);
+}
+
+.info .actions button i.active {
+  color: var(--blue-color);
+}
+
+.channel {
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid var(--grey-light-color);
+  border-bottom: 1px solid var(--grey-light-color);
+}
+
+.channel .metadata {
+  display: flex;
+  align-items: center;
+}
+
+.channel .metadata img {
+  width: var(--avatar-size);
+  height: var(--avatar-size);
+  border-radius: 50%;
+}
+
+.channel .metadata .info {
+  display: flex;
+  flex-direction: column;
+}
+
+.channel .metadata .info .name {
+  font-size: var(--font-medium);
+}
+
+.channel .metadata .info .subscribers {
+  font-size: var(--font-small);
+  color: var(--grey-dark-color);
+}
+
+.channel .subscribe {
+  text-transform: uppercase;
+  color: var(--red-color);
+  font-size: var(--font-medium);
+}
+
+/*up next*/
+
+.upNext {
+  padding: 0 var(--side-paddig);
+}
+
+.upNext > .title {
+  font-size: var(--font-medium);
+  color: var(--grey-dark-color);
+  margin-bottom: calc(var(--side-paddig) / 2);
+}
+
+.upNext .item {
+  display: flex;
+  margin-top: var(--side-paddig);
+}
+
+.upNext .item .img {
+  flex: 1 1 35%;
+  margin-right: var(--side-paddig);
+}
+
+.upNext .item .img img {
+  width: 100%;
+}
+
+.upNext .item .info {
+  flex: 1 1 60%;
+}
+
+.upNext .item .moreBtn {
+  flex: 1 1 5%;
+}
+
+.upNext .item .info {
+  display: flex;
+  flex-direction: column;
+}
+
+.upNext .item .info .name,
+.upNext .item .info .views {
+  font-size: var(--font-micro);
+  color: var(--grey-dark-color);
+}
+
+.infoAndUpNext {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .infoAndUpNext {
+    flex-direction: row;
+    margin: var(--side-paddig);
+  }
 }
