--- a/Nomadcoder/MOMENTUM/css/style.css
+++ b/Nomadcoder/MOMENTUM/css/style.css
@@ -2,6 +2,13 @@
   display: none;
 }
 
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .bgimage {
   min-height: 100%;
   min-width: 1024px;
